k8s/redis/50-redis-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-allow-hospital-and-monitoring
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/part-of: hospital
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: redis
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: be-v1
      ports:
        - protocol: TCP
          port: 6379
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 9121
